test/trivial/deitz/test_module_access1.good
test_module_access1.chpl:12: In function 'foo':
test_module_access1.chpl:13: error: module 'M' must be used before accessing its symbols
test_module_access1.chpl:14: error: module 'M' must be used before accessing its symbols
test_module_access1.chpl:15: error: module 'N' must be used before accessing its symbols
test_module_access1.chpl:16: error: module 'N' must be used before accessing its symbols
test_module_access1.chpl:21: In function 'bar':
test_module_access1.chpl:22: error: module 'M' must be used before accessing its symbols
test_module_access1.chpl:22: error: module 'M' must be used before accessing its symbols
test_module_access1.chpl:22: error: module 'N' must be used before accessing its symbols
test_module_access1.chpl:22: error: module 'N' must be used before accessing its symbols
